# QNotification

./: CMakeLists.txt  COPYING  QNotifierFactory.h  QtAndroidNotifier.cpp  QtAndroidNotifier.h  QtDesktopNotifier.cpp  QtDesktopNotifier.h  QtIOSNotifier.h  QtNotification.cpp  QtNotifierFactory.cpp  README.md  main.cpp
include/: QNotification.h
src/: QAbstractNotifier.h  QNotification.cpp  QNotifierFactory.cpp  QNotifierFactory.h
src/android/: QAndroidNotifier.cpp  QAndroidNotifier.h
src/desktop/: QDesktopNotifier.cpp  QDesktopNotifier.h
src/ios/: QIOSNotifier.h  QIOSNotifier.mm
src/wasm/: QWebassemblyNotifier.cpp  QWebassemblyNotifier.h
wasm/: notification.cpp  notification.h
